<resources>
    <string name="app_name">Encrypted DataStore</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="load">Load</string>
    <string name="name">Name</string>
    <string name="api_key">API Key</string>
    <string name="setting">Setting</string>
    <string name="image">Image</string>
    <string name="message">Message</string>
    <string name="encryption_decryption_process">Encryption/Decryption Process</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypt">Encrypt</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_call">Phone Call</string>
</resources>